...
                NavigationLink(destination: UserRestaurantPage(restaurant: restaurant)) {
                    RestaurantRow(restaurant: restaurant)
                }
            }
            .onDelete(perform: removeItems)
        }
        .navigationBarTitle(Text("My Restaurants"), displayMode: .large)
        .task {
            do {
                user.loadData()
            }
        }
        .toolbar {
...
                                     Image(systemName: "note.text.badge.plus")
                            
                           })
                    Button(action: {
                        self.sheetSelection = .NewRestaurantView
                    },
                           label: { Text("Add Restaurant")
                                    Image(systemName: "house") }
                    )
                } label: {
                    Image(systemName: "line.horizontal.3.decrease.circle")
                        .font(.callout)
                        .foregroundColor(.accentColor)
...
