...
                DispatchQueue.main.asyncAfter(deadline: .now() + delay) {
                    if value == resultHandler.searchQuery {
                        self.resultHandler.searchWithCurrentQuery()
                    }
                }
            }
            .navigationTitle(Text("Restaurant Search"))
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button(action: { self.presentationMode.wrappedValue.dismiss() },
                           label:  { Text("Cancel") }
                    )
...
